# trading

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
scripts/: setup.sh
trading/: __init__.py
trading/clients/: __init__.py  ibkr_client.py
trading/handlers/ibkr/: __init__.py  account_handler.py  base_handler.py  market_data_handler.py  order_handler.py
trading/tests/: conftest.py
trading/tests/handlers/ibkr/: test_account_handler.py  test_market_data_handler.py  test_order_handler.py
trading/types/ibkr/: account.py  market_data.py  requests.py
trading/utils/: common.py
trading/utils/ibkr/: __init__.py
