[project]
name = "trading"
version = "0.1.0"
description = "retail trading fun"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ibapi",
]

[tool.mypy]
packages="trading"
disable_error_code = [
    "union-attr",
]

[[tool.mypy.overrides]]
module = [
    "ibapi.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
extend-exclude = [
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
]

[tool.uv.sources]
ibapi = { path = ".twsapi/IBJts/source/pythonclient" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
